# SVG

./: .gitignore  CMakeLists.txt  Circle.cpp  Circle.h  FileCommands.cpp  FileCommands.h  Line.cpp  Line.h  README.md  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  ShapeArr.cpp  ShapeArr.h  main.cpp
